# bitcoin-LSTM

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  run_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 175382c63536_add_systemconfig_table.py  84641e540464_initial_tables.py
backend/app/: main.py
backend/app/api/: endpoints.py  websockets.py
backend/app/backtest/: engine.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/ml/: features.py  networks.py
backend/app/ml/models/: lstm_v1.pth
backend/app/schemas/: config.py  market_data.py
backend/app/services/: binance_client.py  market_data.py  trade_executor.py
backend/app/strategy/: base.py  registry.py
backend/app/strategy/implementations/: dummy.py  lstm_strategy.py
backend/data/historical/: BTCUSDT_15m_1_month_ago_UTC.csv
backend/scripts/: download_data.py  run_backtest.py  train_model.py
backend/tests/: test_connection.py  test_db.py  test_strategy.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/terminal/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: Header.tsx  LSTMPredictionCard.tsx  PageTransition.tsx  Sidebar.tsx  UptimeCounter.tsx  realtime-chart.tsx
frontend/components/ui/: glass-card.tsx
frontend/context/: MarketContext.tsx
frontend/hooks/: use-bot-manager.ts  use-market-data.ts
